form generating infos for the hero entity working

--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 VITE_BACKEND_URL=http://localhost:3000
+VITE_PUBLIC_KEY=c539264ad5d5ca9039f657c1ca1fbe42
+VITE_PRIVATE_KEY=035a48fbc24d22d7f1eccf4cf30daf45e4c35524
